# nba

./: README.md
backend/: pyproject.toml
backend/backend/: main.py
backend/backend/dependencies/: pagination.py
backend/backend/dependencies/services/: players.py  teams.py
backend/backend/models/: players.py  teams.py
backend/backend/routers/: players.py  teams.py
backend/backend/services/: players.py  teams.py
backend/backend/services/balldontlie/: rest_api.py
