[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Scott Greig <scottjgreig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.112.2"}
loguru = "^0.7.2"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
